appId: host.exp.Exponent
---
- launchApp: "host.exp.Exponent"

- tapOn: GameOn

- runFlow: "teams/create-team-flow.yaml"

- runFlow: "leagues/create-league-flow.yaml"

- tapOn: End2EndLeague, Canada, Forward

- assertVisible: Board
- assertVisible: Matches
- assertVisible: Standings
- assertVisible: Teams
- assertVisible: add
- assertVisible: settings

- tapOn: add
- assertVisible: Create a Post
- assertVisible: Schedule a Match

- tapOn: Create a Post
- tapOn: Enter title
- inputText: General Announcement
- tapOn: What's new?
- inputText: New teams joining soon
- tapOn: Post

- assertVisible: End2EndLeague, General Announcement, New teams joining soon, GAMEON ENDTOEND, 1s, •, person.2.fill

- tapOn: settings
- assertVisible: End2EndLeague, Soccer League, Forward
- tapOn: End2EndLeague, Soccer League, Forward
- assertVisible: End2EndLeague
- assertVisible: Soccer, 
- assertVisible: Amateur, 
- assertVisible: Montreal, 
- assertVisible: Save

- tapOn: League Settings
- assertVisible: Invite Teams
- assertVisible: Invite Organizers
- assertVisible: Switch to a Public League
- assertVisible: Delete League

- tapOn: Invite Teams
- assertVisible: End2EndRunners
- tapOn: Invite
- assertVisible: Invite End2EndRunners?
- assertVisible: Do you want to invite this team to join your league?
- tapOn:
    text: Invite
    index: 1

- assertVisible: Invite sent
- tapOn: League Settings
- tapOn: End2EndLeague
- tapOn: Spaces

- tapOn: Home
- tapOn: notifications
- assertVisible: End2EndLeague
- assertVisible: You received an invite to join End2EndLeague with End2EndRunners.
- tapOn: Accept

- assertVisible: Invite Accepted
- tapOn: Home
- tapOn: Spaces
- tapOn: Leagues
- tapOn: End2EndLeague, Canada, Forward
- tapOn: settings

- tapOn: Delete League
- assertVisible: Delete League
- assertVisible: Are you sure you want to delete this league? This action cannot be undone.
- tapOn: Delete

- assertNotVisible: End2EndLeague, Canada, Forward

- tapOn: Teams
- tapOn: End2EndRunners, Soccer, Forward
- tapOn: settings
- tapOn: Delete Team
- tapOn: Delete

- assertNotVisible: End2EndRunners, Canada, Forward
